--- a/blueexorcist.html
+++ b/blueexorcist.html
@@ -70,7 +70,7 @@ Ceci est un QCM sur Blue Exorcist !<br> Connaissez-vous Blue Exorcist sur le bou
 <hr>	
 <!-- Question 5 --><br>
 <img src="images/logo/blueexorcist/satan.png" id="image"><BR>
-<b>Dans quel corps se trouve Satan ?(L'insecte renifleur)</b><BR>
+<b>Dans quel corps se trouve Satan ?</b><BR>
 
 <BR><input type="radio" id="q5r1" name="q5" value="0">
 	<label for="q5r1"> Le corps de Rin</label>
