--- a/rl.html
+++ b/rl.html
@@ -17,7 +17,7 @@ Ceci est un QCM sur Rocket League !<br> Connaissez-vous Rocket League sur le bou
 <br><br><br><br>
 <hr>
 <!-- Question 1 --><br>
-<iframe  src="video/rl/wall dash.mp4" frameborder="0" id="image"></iframe><BR>
+<iframe width="500" height="320" src="https://www.youtube.com/embed/ImT6lYyOoGo"> </iframe><BR>
 <b>Comment s'appelle ce move ?</b><BR>
 
 <BR><input type="radio" id="q1r1" name="q1" value="1">
@@ -31,7 +31,7 @@ Ceci est un QCM sur Rocket League !<br> Connaissez-vous Rocket League sur le bou
 <hr>	
 <!-- Question 2 --><br>
 <b>Comment s'appelle ce move ?</b><BR>
-<iframe  src="video/rl/musty double tap.mp4" frameborder="0" id="image"></iframe><BR>
+<iframe width="500" height="320"  src="https://www.youtube.com/embed/Dx3vcl8vsLk" ></iframe><BR>
 
 <BR><input type="radio" id="q2r1" name="q2" value="0">
 	<label for="q2r1"> Double tap</label>
@@ -134,7 +134,7 @@ Ceci est un QCM sur Rocket League !<br> Connaissez-vous Rocket League sur le bou
 	<label for="q9r4"> 10</label><br><br><br><br>
 <hr>	
 <!-- Question 10 --><br>
-<iframe  src="video/rl/ceilling musty.mp4" frameborder="0" id="image"></iframe><BR><BR>
+<iframe width="500" height="320"  src="https://www.youtube.com/embed/u1dA6UGvufQ" ></iframe><BR>
 <b>Comment s'appelle ce move ?</b><BR>
 
 <BR><input type="radio" id="q10r1" name="q10" value="0">
