--- a/valorant.html
+++ b/valorant.html
@@ -1,10 +1,10 @@
 <HTML>
 	<!--En-tête de la page -->
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="rl.css" />
+        <link rel="stylesheet" href="valorant.css" />
         <title> Rocket League Qcm </title>
 <HEAD>
-<script src="rl.js" defer="defer"></script>
+<script src="valorant.js" defer="defer"></script>
 <style>
 			#playlist{
 			list-style:none;
@@ -30,7 +30,7 @@ Ceci est un QCM sur Rocket League !<br> Connaissez-vous Rocket League sur le bou
 <br><br><br><br>
 <hr>
 <!-- Question 1 --><br>
-<iframe width="500" height="320" src="https://www.youtube.com/embed/ImT6lYyOoGo"> </iframe><BR>
+<iframe  src="video/rl/wall dash.mp4" frameborder="0" id="image"></iframe><BR>
 <b>Comment s'appelle ce move ?</b><BR>
 
 <BR><input type="radio" id="q1r1" name="q1" value="1">
@@ -44,7 +44,7 @@ Ceci est un QCM sur Rocket League !<br> Connaissez-vous Rocket League sur le bou
 <hr>	
 <!-- Question 2 --><br>
 <b>Comment s'appelle ce move ?</b><BR>
-<iframe width="500" height="320"  src="https://www.youtube.com/embed/Dx3vcl8vsLk" ></iframe><BR>
+<iframe  src="video/rl/musty double tap.mp4" frameborder="0" id="image"></iframe><BR>
 
 <BR><input type="radio" id="q2r1" name="q2" value="0">
 	<label for="q2r1"> Double tap</label>
@@ -147,7 +147,7 @@ Ceci est un QCM sur Rocket League !<br> Connaissez-vous Rocket League sur le bou
 	<label for="q9r4"> 10</label><br><br><br><br>
 <hr>	
 <!-- Question 10 --><br>
-<iframe width="500" height="320"  src="https://www.youtube.com/embed/u1dA6UGvufQ" ></iframe><BR>
+<iframe  src="video/rl/ceilling musty.mp4" frameborder="0" id="image"></iframe><BR><BR>
 <b>Comment s'appelle ce move ?</b><BR>
 
 <BR><input type="radio" id="q10r1" name="q10" value="0">
