--- a/tokyoghoul.html
+++ b/tokyoghoul.html
@@ -5,6 +5,19 @@
         <title> Tokyo Ghoul Qcm </title>
 <HEAD>
 <script src="tokyoghoul.js" defer="defer"></script>
+<style>
+			#playlist{
+			list-style:none;
+			}
+			#playlist li a{
+			color:black;
+			text-decoration:none;
+			}
+			#playlist .current-song a{
+				color:blue;
+				background-color:rgba(10,10,10,0.7);
+				}
+		</style>
 </HEAD>
 <H1><button type="bouton" onclick="window.location.href = 'anime.html';"></left>Anime Qcm</button></H1>
 <center><font size="6"
@@ -17,7 +30,7 @@ Ceci est un QCM sur Tokyo Ghoul !<br> Connaissez-vous Tokyo Goul sur le bout des
 <br><br>
 <hr>
 <!-- Question 1 --><br>
-<img src="images/logo/TokyoGhoul/kaneki.png" id="image"><BR>
+<img src="images/logo/tokyoghoul/kaneki.png" id="image"><BR>
 <b>Qui est ce personnage ?</b><BR>
 
 <BR><input type="radio" id="q1r1" name="q1" value="1">
@@ -30,7 +43,7 @@ Ceci est un QCM sur Tokyo Ghoul !<br> Connaissez-vous Tokyo Goul sur le bout des
 	<label for="q1r4"> Kaneki Uta </label><br><br><br><br>
 <hr>	
 <!-- Question 2 --><br>
-<img src="images/logo/TokyoGhoul/who.png" id="image"><BR>
+<img src="images/logo/tokyoghoul/who.png" id="image"><BR>
 <b>Que lui arrive-t-il au début ?</b><BR>
 
 <BR><input type="radio" id="q2r1" name="q2" value="0">
@@ -43,7 +56,7 @@ Ceci est un QCM sur Tokyo Ghoul !<br> Connaissez-vous Tokyo Goul sur le bout des
 	<label for="q2r4"> il se fait opérer</label><br><br><br><br>
 <hr>	
 <!-- Question 3 --><br>
-<img src="images/logo/TokyoGhoul/who.png" id="image"><BR>
+<img src="images/logo/tokyoghoul/who.png" id="image"><BR>
 <b>Que devient-il à cause de cela ?</b><BR>
 
 <BR><input type="radio" id="q3r1" name="q3" value="0">
@@ -56,7 +69,7 @@ Ceci est un QCM sur Tokyo Ghoul !<br> Connaissez-vous Tokyo Goul sur le bout des
 	<label for="q3r4"> Un humain avec des pouvoirs</label><br><br><br><br>
 <hr>	
 <!-- Question 4 --><br>
-<img src="images/logo/TokyoGhoul/who.png" id="image"><BR>
+<img src="images/logo/tokyoghoul/who.png" id="image"><BR>
 <b>Quelle est sa particularité</b><BR>
 
 <BR><input type="radio" id="q4r1" name="q4" value="1">
@@ -69,7 +82,7 @@ Ceci est un QCM sur Tokyo Ghoul !<br> Connaissez-vous Tokyo Goul sur le bout des
 	<label for="q4r4"> il a perdu l'odorat</label><br><br><br><br>
 <hr>	
 <!-- Question 5 --><br>
-<img src="images/logo/TokyoGhoul/antique.png" id="image"><BR>
+<img src="images/logo/tokyoghoul/antique.png" id="image"><BR>
 <b>Comment se nomme le café qui le recueille après sa transformation</b><BR>
 
 <BR><input type="radio" id="q5r1" name="q5" value="0">
@@ -82,7 +95,7 @@ Ceci est un QCM sur Tokyo Ghoul !<br> Connaissez-vous Tokyo Goul sur le bout des
 	<label for="q5r4"> Onigiri </label><br><br><br><br>
 <hr>	
 <!-- Question 6 --><br>
-<img src="images/logo/TokyoGhoul/kureo.png" id="image"><BR>
+<img src="images/logo/tokyoghoul/kureo.png" id="image"><BR>
 <b>Après le décès de Kureo Mado, un membre de sa famille rejoint le CCG. Mais qui est ce membre ?</b><BR>
 
 <BR><input type="radio" id="q6r1" name="q6" value="0">
@@ -95,7 +108,7 @@ Ceci est un QCM sur Tokyo Ghoul !<br> Connaissez-vous Tokyo Goul sur le bout des
 	<label for="q6r4"> Sa nièce</label><br><br><br><br>
 <hr>	
 <!-- Question 7 --><br>
-<img src="images/logo/TokyoGhoul/shu.png" id="image"><BR>
+<img src="images/logo/tokyoghoul/shu.png" id="image"><BR>
 <b>Quelle goule trouve que Kaneki a un goût délicieux et voudrait le manger ?</b><BR>
 
 <BR><input type="radio" id="q7r1" name="q7" value="1">
@@ -108,7 +121,7 @@ Ceci est un QCM sur Tokyo Ghoul !<br> Connaissez-vous Tokyo Goul sur le bout des
 	<label for="q7r4"> Kirishima Uta</label><br><br><br><br>
 <hr>	
 <!-- Question 8 --><br>
-<img src="images/logo/TokyoGhoul/arrondissement.png" id="image"><BR>
+<img src="images/logo/tokyoghoul/arrondissement.png" id="image"><BR>
 <b>De quel arrondissement Kaneki est-il originaire ?</b><BR>
 
 <BR><input type="radio" id="q8r1" name="q8" value="0">
@@ -121,7 +134,7 @@ Ceci est un QCM sur Tokyo Ghoul !<br> Connaissez-vous Tokyo Goul sur le bout des
 	<label for="q8r4"> Le 15e</label><br><br><br><br>
 <hr>	
 <!-- Question 9 --><br>
-<img src="images/logo/TokyoGhoul/jason.png" id="image"><BR>
+<img src="images/logo/tokyoghoul/jason.png" id="image"><BR>
 <b>Qui a torturé Kaneki dans une pièce ?</b><BR>
 
 <BR><input type="radio" id="q9r1" name="q9" value="0">
@@ -134,7 +147,7 @@ Ceci est un QCM sur Tokyo Ghoul !<br> Connaissez-vous Tokyo Goul sur le bout des
 	<label for="q9r4"> Jason, pour ne pas perdre la raison.</label><br><br><br><br>
 <hr>	
 <!-- Question 10 --><br>
-<img src="images/logo/TokyoGhoul/chouette.png" id="image"><BR>
+<img src="images/logo/tokyoghoul/chouette.png" id="image"><BR>
 <b>Qui est la Chouette et le chef d'Aogiri ?</b><BR>
 
 <BR><input type="radio" id="q10r1" name="q10" value="1">
@@ -160,3 +173,21 @@ Ceci est un QCM sur Tokyo Ghoul !<br> Connaissez-vous Tokyo Goul sur le bout des
 <div id="scroll_to_top">
     <a href="#top">👆</a>
 </div>
+<ul id="playlist"><br>
+		<p id="black">Playlist : </p>
+		<audio src="" controls id="audioPlayer">
+			Sorry, 	your browser doesn't support html5!
+		</audio>
+			<li class="current-song"><a href="music/naruto/Asphyxia.mp3">Asphyxia</a></li>
+			<li><a href="music/naruto/Bluebird.mp3"> BlueBird</a></li>
+			<li><a href="music/naruto/Unravel.mp3">Unravel</a></li>
+			<li><a href="music/naruto/Bluebird.mp3"> BlueBird</a></li>
+			<li><a href="music/naruto/Unravel.mp3">Unravel</a></li>
+			<li><a href="music/naruto/Bluebird.mp3"> BlueBird</a></li>
+			<li><a href="music/naruto/Unravel.mp3">Unravel</a></li>
+			
+		</ul>
+		<script src="https://code.jquery.com/jquery-2.2.0.js">
+		</script>
+		<script src="naruto.js">
+		</script>
