--- a/valorant.html
+++ b/valorant.html
@@ -14,7 +14,7 @@
 			text-decoration:none;
 			}
 			#playlist .current-song a{
-				color:blue;
+				color:red;
 				background-color:rgba(10,10,10,0.7);
 				}
 		</style>
